@@ -1,5 +1,6 @@
 ===v4.4.1===
  * New Condition: Spell autocasting
+ * New Condition: Tracking active
  * Added a toggle to DR icons to help work around the buggy spell refresh behavior.
  * Greatly improved config mode texture detection.
  * Bug Fixes:
